--- a/styles/admin.css
+++ b/styles/admin.css
@@ -1,59 +1,55 @@
 /* Back-end styles */
 /* styles for theme options page */
-#ct_theme_name-dashboard-wrap h2 {
+#ct_mission-dashboard-wrap h2 {
   margin-bottom: 24px;
 }
-
-.content {
+#ct_mission-dashboard-wrap .content {
   margin-top: 12px;
   padding: 12px 24px 24px;
   border: solid 1px #e5e5e5;
   background: white;
 }
-.content .button-primary {
+#ct_mission-dashboard-wrap .content .button-primary {
   margin: 12px 0;
 }
-.content ul {
+#ct_mission-dashboard-wrap .content ul {
   list-style: disc;
   margin-left: 36px;
 }
 
 /* 600px */
 @media all and (min-width: 37.5em) {
-  .content {
+  #ct_mission-dashboard-wrap .content {
     width: 39%;
     float: left;
   }
-  .content p {
+  #ct_mission-dashboard-wrap .content p {
     min-height: 57px;
   }
-
-  .content-premium-upgrade p {
-    min-height: 0px;
+  #ct_mission-dashboard-wrap .content-review {
+    min-height: 192px;
   }
-
-  .content-customization,
-  .content-premium-upgrade {
+  #ct_mission-dashboard-wrap .content-customization,
+  #ct_mission-dashboard-wrap .content-premium-upgrade,
+  #ct_mission-dashboard-wrap .content-review {
     margin-right: 2%;
   }
 }
 /* 1100px */
 @media all and (min-width: 68.75em) {
-  .content {
+  #ct_mission-dashboard-wrap .content {
     width: 27%;
   }
-
-  .content-resources {
+  #ct_mission-dashboard-wrap .content-resources {
     clear: left;
   }
-
-  .content-customization,
-  .content-support,
-  .content-resources {
+  #ct_mission-dashboard-wrap .content-customization,
+  #ct_mission-dashboard-wrap .content-support,
+  #ct_mission-dashboard-wrap .content-resources,
+  #ct_mission-dashboard-wrap .content-review {
     margin-right: 1%;
   }
-
-  .content-premium-upgrade {
+  #ct_mission-dashboard-wrap .content-premium-upgrade {
     margin-right: 0;
   }
 }
