--- a/styles/rtl.css
+++ b/styles/rtl.css
@@ -1,17 +1,17 @@
 /*
 Theme Name: CT Starter
-Theme URI: https://competethemes.com/ct_theme_name/
+Theme URI: https://competethemes.com/ct_mission/
 Author: Compete Themes
 Author URI: https://competethemes.com/
-Description: Ct_theme_name is a bold and minimalist blog theme for publishers who want to be heard.
+Description: ct_mission is a bold and minimalist blog theme for publishers who want to be heard.
 Version: 0.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: gray, silver, white, light, dark, two-columns, right-sidebar, left-sidebar, responsive-layout, custom-menu, featured-images, sticky-post, theme-options, threaded-comments, translation-ready
-Text Domain: ct_theme_name
+Text Domain: ct_mission
 
-Ct_theme_name WordPress Theme, Copyright 2014 Compete Themes
-Ct_theme_name is distributed under the terms of the GNU GPL
+ct_mission WordPress Theme, Copyright 2014 Compete Themes
+ct_mission is distributed under the terms of the GNU GPL
 */
 /*===== Variables =====*/
 /* Theme Colors */
