--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,8 +1,8 @@
 /*===== Variables =====*/
 
-$pt-serif: 'pt-serif', serif;
-$pt-sans: 'pt-sans', sans-serif;
-$abril-fatface: 'abril-fatface', 'serif';
+$pt-serif: 'PT Serif', serif;
+$pt-sans: 'PT Sans', sans-serif;
+$abril-fatface: 'Abril Fatface', cursive;
 $baseline-height: 1.5em;
 $column: 2.778%;
 
