--- a/style.css
+++ b/style.css
@@ -33,9 +33,29 @@ h2 {
   /* 24px */
 }
 
-.wp-caption-text,
-.gallery-caption, input:not([type="checkbox"]):not([type="radio"]):not([type="submit"]):not([type="file"]):not([type="image"]),
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="number"],
+input[type="search"],
+input[type="tel"],
+input[type="url"],
 textarea, input[type="submit"] {
+  font-size: 0.875em;
+  /* 14px / 16px */
+  line-height: 1.286;
+  /* 18px */
+}
+
+textarea {
+  font-size: 0.875em;
+  /* 14px / 16px */
+  line-height: 1.571;
+  /* 22px */
+}
+
+.wp-caption-text,
+.gallery-caption {
   font-size: 0.75em;
   /* 12px / 16px */
   line-height: 1.5;
@@ -51,12 +71,12 @@ textarea, input[type="submit"] {
 body {
   height: 100%;
   font-size: 100%;
+  line-height: 1.5;
   margin: 0;
   padding: 0;
-  line-height: 1.5;
-  -webkit-font-smoothing: subpixel-antialiased;
-  word-wrap: break-word;
-  -ms-word-wrap: break-word;
+  font-family: "PT Serif", serif;
+  color: #000;
+  -webkit-font-smoothing: antialiased;
 }
 
 .overflow-container {
@@ -83,7 +103,18 @@ p {
   margin: 1.5em 0;
 }
 
+a {
+  color: #176DB3;
+}
+a:link, a:visited {
+  color: #176DB3;
+}
+a:hover, a:active, a:focus {
+  color: #1976C2;
+}
+
 h1, h2, h3, h4, h5, h6 {
+  font-family: "PT Serif", serif;
   margin: 0;
   padding: 0;
   font-weight: 400;
@@ -117,17 +148,20 @@ li li {
 /* Markup styles */
 pre {
   word-wrap: break-word;
+  background: #F3F3F3;
   white-space: pre-wrap;
   padding: 0.75em;
 }
 
 code {
+  background: #F3F3F3;
   padding: 0 0.375em;
 }
 
 blockquote {
   margin: 1.5em 1.5em 1.5em 0;
   padding-left: 1.5em;
+  border-left: solid 3px #000;
 }
 blockquote cite {
   display: block;
@@ -148,6 +182,7 @@ table {
 td,
 th {
   padding: 0.75em;
+  border: solid 1px #666666;
 }
 
 /* Images */
@@ -185,39 +220,84 @@ img,
   height: auto;
 }
 
+.wp-caption-text,
+.gallery-caption {
+  font-family: "PT Sans", sans-serif;
+  color: #666666;
+}
+
 /* Form styles */
-input:not([type="checkbox"]):not([type="radio"]):not([type="submit"]):not([type="file"]):not([type="image"]),
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="number"],
+input[type="search"],
+input[type="tel"],
+input[type="url"],
 textarea {
   width: 100%;
+  font-family: "PT Sans", sans-serif;
   padding: 10px 12px;
-  max-width: 27.75em;
-  border: none;
+  color: #000;
+  border: solid 1px #DCDCDC;
   border-radius: 0;
   -webkit-appearance: none;
-  -webkit-transition: all 0.1s ease-in-out;
-  transition: all 0.1s ease-in-out;
+  -webkit-transition: border-color 0.15s;
+  transition: border-color 0.15s;
+}
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus,
+input[type="number"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="url"]:focus,
+textarea:focus {
+  outline: none;
+  border-color: #176DB3;
 }
 
 textarea {
-  max-width: 41.625em;
   overflow: auto;
   /* to hide scrollbar in IE */
 }
 
 input[type="submit"] {
+  font-family: "PT Sans", sans-serif;
   padding: 10px 12px;
   color: white;
-  outline: none;
+  background: #000;
   border: none;
   border-radius: 0;
   -webkit-appearance: none;
-  -webkit-transition: all 0.1s ease-in-out;
-  transition: all 0.1s ease-in-out;
+  -webkit-transition: background 0.15s;
+  transition: background 0.15s;
 }
 input[type="submit"]:hover {
   cursor: pointer;
 }
+input[type="submit"]:hover, input[type="submit"]:active, input[type="submit"]:focus {
+  outline: none;
+  background: #4C4C4C;
+}
 
+::-webkit-input-placeholder {
+  color: #666666;
+}
+
+:-moz-placeholder {
+  color: #666666;
+}
+
+::-moz-placeholder {
+  color: #666666;
+}
+
+:-ms-input-placeholder {
+  color: #666666;
+}
+
+/* sticky */
 /* ie image border fix */
 a img {
   border: none;
@@ -255,8 +335,9 @@ a img {
   color: white !important;
   z-index: 99;
   padding: 1.5em;
-  -webkit-transition: top 0.2s ease-in-out;
-  transition: top 0.2s ease-in-out;
+  background: #000;
+  -webkit-transition: top 0.15s;
+  transition: top 0.15s;
 }
 .skip-content:focus {
   top: 0;
