--- a/style.css
+++ b/style.css
@@ -62,6 +62,24 @@ textarea {
   /* 18px */
 }
 
+.site-header .date {
+  font-size: 0.625em;
+  /* 12px / 16px */
+  line-height: 1.8;
+  /* 18px */
+}
+
+.site-title a {
+  color: #000;
+  text-decoration: none;
+}
+.site-title a:link, .site-title a:visited {
+  color: #000;
+}
+.site-title a:hover, .site-title a:active, .site-title a:focus {
+  color: #666666;
+}
+
 /*===== Basic Styles =====*/
 /* apply a natural box layout model to all elements */
 *, *:before, *:after {
@@ -438,8 +456,45 @@ a img {
   margin: 0 auto;
 }
 
+.site-header {
+  padding: 0.75em 5.556%;
+  border-bottom: solid 1px #DCDCDC;
+  margin-bottom: 1.125em;
+  text-align: center;
+}
+.site-header .date {
+  margin: 0;
+}
+
+.title-container {
+  display: inline-block;
+}
+
+.site-title {
+  font-family: "Abril Fatface", cursive;
+}
+
+.tagline {
+  display: none;
+}
+
 .pagination {
   clear: both;
+}
+
+.toggle-navigation {
+  float: right;
+  border: solid 1px #DCDCDC;
+  border-radius: 3px;
+  background: none;
+  margin: 0;
+  padding: 7px 5px;
+  margin-left: -36px;
+}
+
+.menu-primary-container,
+.menu-secondary-container {
+  display: none;
 }
 
 .featured-image {
