--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -14,6 +14,7 @@ $color-gray-95: #F3F3F3;
 $color-gray-86: #DCDCDC;
 $color-gray-40: #666666;
 $color-gray-30: #4C4C4C;
+$color-gray-15: #262626;
 
 /* Media Query widths */
 
@@ -156,6 +157,20 @@ $tencent-weibo: #20b8e5;
   &:active,
   &:focus {
     color: $color-gray-40;
+  }
+}
+%white-link {
+  color: #fff;
+  text-decoration: none;
+
+  &:link,
+  &:visited {
+    color: #fff;
+  }
+  &:hover,
+  &:active,
+  &:focus {
+    color: $color-gray-95
   }
 }
 //%light-link {
