--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -1,14 +1,112 @@
 .toggle-navigation {
+  position: relative;
+  z-index: 19;
   float: right;
   border: solid 1px $color-gray-86;
   border-radius: 3px;
   background: none;
   margin: 0;
-  padding: 7px 5px;
+  padding: 8px 5px;
   margin-left: -36px;
-}
+  transition: border-color 0.35s;
 
-.menu-primary-container,
+  &:hover {
+    cursor: pointer;
+  }
+  svg {
+    display: block;
+  }
+  .top-bar,
+  .bottom-bar {
+    transition: transform 0.35s;
+  }
+  .middle-bar {
+    transition: opacity 0.35s;
+  }
+  &.open {
+    border-color: #000;
+
+    .top-bar {
+      transform: translateY(8px);
+    }
+    .middle-bar {
+      opacity: 0;
+    }
+    .bottom-bar {
+      transform: translateY(-8px);
+    }
+  }
+  &:focus {
+    outline: none;
+  }
+}
 .menu-secondary-container {
   display: none;
+}
+
+.menu-primary-container {
+  position: absolute;
+  z-index: 9;
+  top: 67px;
+  bottom: 0;
+  left: 100%;
+  width: 100%;
+  background: rgba(0,0,0,0.9);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.35s, visibility 0.35s, transform 0.25s;
+
+  &.open {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(-100%);
+  }
+}
+.menu-primary {
+  padding: $baseline-height $column * 2;
+  text-align: left;
+}
+.menu-primary-items,
+.menu-unset ul {
+  list-style: none;
+  margin: 0;
+
+  &:after {
+    @include clearfix;
+  }
+  li {
+    margin-bottom: $baseline-height/2;
+    padding-bottom: $baseline-height/2;
+    border-bottom: solid 1px $color-gray-15;
+
+    &.current-menu-item {
+
+      > a {
+        color: $color-blue;
+      }
+    }
+  }
+  a {
+    @extend %white-link;
+    font-family: $pt-sans;
+    display: inline-block;
+    padding: 3px 6px;
+  }
+  ul {
+    position: relative;
+    list-style: none;
+    margin: 0 0 0 $baseline-height/2;
+    overflow: hidden;
+
+    li {
+      font-size: 1em;
+
+      &:first-child {
+        margin-top: $baseline-height/2;
+      }
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
 }
