lots of primary menu updates

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -12,6 +12,7 @@ $color-blue: #176DB3;
 $color-blue-hover: #1976C2;
 $color-gray-95: #F3F3F3;
 $color-gray-86: #DCDCDC;
+$color-gray-60: #999999;
 $color-gray-40: #666666;
 $color-gray-30: #4C4C4C;
 $color-gray-15: #262626;
