--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -51,7 +51,7 @@
   bottom: 0;
   left: 100%;
   width: 100%;
-  background: rgba(0,0,0,0.9);
+  background: rgba(0,0,0,0.90);
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.35s, visibility 0.35s, transform 0.25s;
@@ -61,10 +61,21 @@
     visibility: visible;
     transform: translateX(-100%);
   }
+  &.tiered {
+
+    .menu-primary {
+      transform: translateX(-100%);
+    }
+    .dropdown-navigation {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
 }
 .menu-primary {
-  padding: $baseline-height $column * 2;
+  padding: 0 $column * 2;
   text-align: left;
+  transition: transform 0.25s;
 }
 .menu-primary-items,
 .menu-unset ul {
@@ -75,6 +86,7 @@
     @include clearfix;
   }
   li {
+    position: relative;
     margin-bottom: $baseline-height/2;
     padding-bottom: $baseline-height/2;
     border-bottom: solid 1px $color-gray-15;
@@ -88,25 +100,65 @@
   }
   a {
     @extend %white-link;
+    display: block;
     font-family: $pt-sans;
-    display: inline-block;
     padding: 3px 6px;
   }
   ul {
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 100%;
     list-style: none;
-    margin: 0 0 0 $baseline-height/2;
     overflow: hidden;
-
-    li {
-      font-size: 1em;
-
-      &:first-child {
-        margin-top: $baseline-height/2;
-      }
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
   }
+}
+.toggle-dropdown {
+  @extend %twenty-one-pixels;
+  position: absolute;
+  right: 0;
+  top: -13px;
+  color: #fff;
+  background: none;
+  margin: 0;
+  padding: 15px $column * 2;
+  border: solid 1px $color-gray-15;
+  border-radius: 0;
+}
+.dropdown-navigation {
+  position: relative;
+  z-index: 39;
+  opacity: 0;
+  visibility: hidden;
+  font-family: $pt-sans;
+  color: #fff;
+  text-align: left;
+  border-bottom: solid 1px $color-gray-15;
+  margin-bottom: $baseline-height/2;
+  transition: opacity 0.35s, visibility 0.35s;
+
+  &:after {
+    @include clearfix;
+  }
+  a {
+    @extend %white-link;
+    @extend %twelve-pixels;
+    @extend %uppercase;
+    font-weight: 700;
+    float: left;
+    display: block;
+    padding: $baseline-height/2 $column * 2;
+  }
+  span {
+    @extend %twelve-pixels;
+    @extend %uppercase;
+    font-weight: 700;
+    float: right;
+    padding: $baseline-height/2 $column * 2;
+    color: $color-gray-60;
+  }
+}
+.menu-primary-items {
+  position: relative;
+  top: -30px;
 }
