--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -61,14 +61,38 @@
     visibility: visible;
     transform: translateX(-100%);
   }
-  &.tiered {
+  &.tier-2,
+  &.tier-3,
+  &.tier-4,
+  &.tier-5 {
+
+    .dropdown-navigation {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+  &.tier-2 {
 
     .menu-primary {
       transform: translateX(-100%);
     }
-    .dropdown-navigation {
-      opacity: 1;
-      visibility: visible;
+  }
+  &.tier-3 {
+
+    .menu-primary {
+      transform: translateX(-200%);
+    }
+  }
+  &.tier-4 {
+
+    .menu-primary {
+      transform: translateX(-300%);
+    }
+  }
+  &.tier-5 {
+
+    .menu-primary {
+      transform: translateX(-400%);
     }
   }
 }
@@ -87,9 +111,8 @@
   }
   li {
     position: relative;
-    margin-bottom: $baseline-height/2;
-    padding-bottom: $baseline-height/2;
     border-bottom: solid 1px $color-gray-15;
+    //border-bottom: solid 1px #fff;
 
     &.current-menu-item {
 
@@ -102,28 +125,61 @@
     @extend %white-link;
     display: block;
     font-family: $pt-sans;
-    padding: 3px 6px;
+    padding: 15px 0;
+    transition: color 0.15s;
+
+    &:hover,
+    &:active,
+    &:focus {
+      color: $color-gray-86;
+    }
   }
   ul {
     position: fixed;
-    top: 0;
+    top: -12px;
     left: 100%;
     width: 100%;
     list-style: none;
-    overflow: hidden;
+    margin: 0;
+    padding: 0 $column * 2;
+
+    ul {
+    left: 200%;
+    }
+    ul ul {
+      left: 300%;
+    }
+    ul ul ul {
+      left: 400%;
+    }
   }
 }
 .toggle-dropdown {
   @extend %twenty-one-pixels;
   position: absolute;
   right: 0;
-  top: -13px;
+  top: -1px;
   color: #fff;
   background: none;
   margin: 0;
   padding: 15px $column * 2;
   border: solid 1px $color-gray-15;
+  //border: solid 1px #fff;
   border-radius: 0;
+  transition: color 0.15s, background 0.15s;
+
+  &:hover {
+    cursor: pointer;
+  }
+  &:focus {
+    outline: none;
+  }
+  &:hover,
+  &:active,
+  &:focus {
+    color: $color-gray-86;
+    background: #000;
+  }
 }
 .dropdown-navigation {
   position: relative;
@@ -160,5 +216,5 @@
 }
 .menu-primary-items {
   position: relative;
-  top: -30px;
+  top: -42px;
 }
