menu working better with three tiers now and scrolling to top with every transition

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -14,6 +14,13 @@ body {
   font-family: $pt-serif;
   color: #000;
   -webkit-font-smoothing: antialiased;
+
+
+  &.noscroll {
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+  }
 }
 .overflow-container {
   position: relative;
