--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,4 +1,5 @@
 .site-header {
+  position: relative;
   padding: $baseline-height/2 $column * 2;
   border-bottom: solid 1px $color-gray-86;
   margin-bottom: $baseline-height * .75;
